--- a/trunk/ land-cost/LandCost.Forms/Forms/CertificationForm.resx
+++ b/trunk/ land-cost/LandCost.Forms/Forms/CertificationForm.resx
@@ -171,34 +171,34 @@
   <data name="exportBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJVSURBVDhPjZNvaBJhHMcXhL7IiKh3QcJAWL2LQS0wXVsw
-        c0rM0Bcbg+2N0yhYLVa9KMJm2MJa9Lo3QY2WELegbGPB3CiKzW06zjk9HIqVlrl5Pt5f/XV3L2R6YT1w
-        d9w9v8/n932eh2tqqhsAsJem6eMUxbiyvwufIvGUnSCIA/V1Ne8CpEAs24Yo5l6Jor4WSMRSNAMkoiC6
-        lYZwLJlIZrfvjHm9R2Qiq7W3FXEcXkRUuUQxsPsSJakfOSBSGUA0B7Ozc9MygVqtPoHHEiTHV2rgehnD
-        8sCXK2Cz2cwyicf7ZIoX1kHRbEOJUAKBQGBGJtBojuli8UTxXylohhMbVIxG41mZZPSVc9EV6YfhVSPc
-        DFvgXfoFkCUkSySmwDDsdY3g8op+wB01gj14WoI/Zn0wGuqBiegIbKOdGomYQlgqb7FYzlUlbrwLf7Bp
-        BvuyHkZCJihwecjQKRiPOgFLPftrCr/fj1UF3nh38SnRBzFyHb5TW8BVWDGpIMqBZ8MhE4gnwgg3g8Gg
-        lyRu/Hz8UdwEwfyCBObZrPSc//kGLq101AhYrizNZXI7cMFiHZAEV1bbxycIE4xFesEVGYS7eD8k0aa0
-        HzfCFyWB2FUc6cwv3vPw8ftmjaZHQPdJAvuS/vDVtY7F4TUdDC6dAkdQB9dD4p5owf/tpQSSiIZJ33So
-        9WTbkIAckh2jM6Q9aF/W3XcEtZGhz2fQ7fU+mMtMQVHojr39sNHe2XlNgI42/Kl2Te5/Pun7MjO/kOrq
-        Nt9SKpXN/wtW61QqVYtCoWgRPuxpBP8BUlc01BZrlaIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJZSURBVDhPjZNvSBNhHMcNYnuREVHvggbCwHoXQhmszTRw
+        zY1wsb1QBH0ztyiwFKsXRSwXy1gZve5NUJIN4gxqKQZOEQqdusnm3C5ll+Uma2632z33Z/t1dy+G28Xq
+        gYfj7vl9Ps/3+T1cXV3VAICDCKHTNM04U79zC5E4YcNx/Eh1XcW7ACkolm2maOZhgaa/ZXN5lkYMkBQN
+        0a1tCMUSm4nU3v0Rj+eETGSxdDVRHBcm84VigWZg/xQlxE4acCIJFOJgenpmUiZQqVRnwrFNkuNLFXC1
+        jGF54IslsFqtJpnE7Xk+wQvnoBFbUyKUgN/vn5IJ1OpT2lj8e/5fKRDDAVVAJYPBcFEmGX7rmHdGemBg
+        xQB3Qmb4uP0ayAIlSySmwDDsXYXg+rKu1xU1gC1wXoK/pLwwHOyEsegg7FHZComYQugPbzabL5UlrnB7
+        +PGGCWxLOhgMGiHHZSCJCBiNOgAjXv41hc/nw8oCT7wj/wLvhhi5Br/oLeBKrJhUEKXBvW6XCcQbQYjh
+        9Xq9TpK4wpfjT+NGCGTmJDDDpqTn7O57uLbcWiFguaK0lkxn4YrZ0isJbqy0jI7hRhiJdIEz0gcPwj2Q
+        oDakftwOXZUE4q7i+LGzy7ufPPvUoFZ3CughSWBb1B2/udo6P7Cqhb7Fc2APaGEoKPZEA76fbySQpBCM
+        eyeDTWeb+wXkmOwaHUHNUduS9pE9oIn0L1yg7q11w0xyAvLC7tiHz+stbW23BOhkzZ9q3+LhV+Per1Oz
+        c0R7h+muUqls+F+wXFdfX9+oUCgahQ8HasF/ACNPNMDoqybPAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="refreshBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJySURBVDhPY2DAAqynOGpbTbKztZjtJoRNHqeY+zx/25zd
-        JW97L0/433iq5b//xpB/Jkssd1lPs7cgaJDxVmvX3EOF/ya+mfS/+UnL/5g9iV8TL2Q+zL9U/N9ik+1f
-        i5n2OTgNsd9vzxF0MOxL8/PW//NfLPwfvynjRfz6eAWQBvP1NsZRu+KOWiyz+2891SEZqyGGO8yDLe5Y
-        /e941v0/aXP6f8tp9jooCv8zMFoudKywmuwQjGFA2PrY7YYbzW+qXVL/n3M177/1LPuXuJwKdClL4rqk
-        dxZT7FXgamI2xr3VuqzzX+2Sxv/Mq9n/kzak/w5eHfPIbJa9DLpBdjtc6lO2Z/y3nua4Ai7nvytE139n
-        8G+1ixr/tU7r/M+/Uvjfa0HAJnTN1qsdtcNuRf6a82D+f5uZLv/MJjnqw9UE7Qg5pXpF7b/rRbf/SZtS
-        3pjPdhJHNiB0VSizwzHX091vev7Pez//f8r2LGA4OSAs0dtpKeZ5wPd36anK/1ZTHcLRbY/fmHItZmvi
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJySURBVDhPY2DAAqynOGpbTbKztZjtJoRNHqeY+zx/2+zd
+        JW97L0/433iq5b//hpB/Jkssd1lPs7cgaJDxVmvX3IOF/ya+mfS/+UnL/+g9CV8TL2Q+zL9U/N9ik+1f
+        i5n2OTgNsd9vzxF4MPRL8/PW//NfLPwftynjRfz6eAWQBvP1NsZRu+KOWiyz+2891SEZqyGGO8yDLe5Y
+        /e941v0/aXP6f8tp9jooCv8zMFoudKywmuwQjGFA2PrY7YYbzW+qXVL/n3M177/1LPuXuJwKdClL4trE
+        dxZT7FXgamI2xr7VuqzzX+2Sxv/Mq9n/E9en/Q5eHfPIbJa9DLpBdjtc6lO2Z/y3nua4Ai7nvytE139H
+        8G+1ixr/tU7r/M+/Uvjfa0HAJnTN1qsdtUNvRfya82D+f5sZLv/MJjnqw9UE7Qg5pXpF7b/rRbf/SZtS
+        3pjPdhJHNiB0VSizwzHX091vev7Pez//f8r2LGA4OSAs0dtpKeZ5wPd36anK/1ZTHcLRbY/fmHItZkvi
         v8oXVf97Xvf+n35v5n+buS7/LSY5mcHVhuyPqnGZ612AKwCNN1nLxR1O+t/zsvf/2ufrIbE1xaENQz0o
-        hM2nOumhS8RtTomLu5fwf/qrmf89lvj/t5rmZIvVMpvlTufNlzi8N5tm64SsIHxTwrP420n/++9N/G89
-        w/EazlRpsdlCOv1ozpW001n/nVd47bWZ51QfsTX2gtYx7T/2pxz/F+8v/2s5yRHFcAzD7FfZ85jvs+4L
-        vRjxI+xRxH/9mwb/LS5Z/c89WPrWdrIzZmrE5RyzbWZ8Vqtt3czX2aTaLXJytZrjx4uuFgAQfRFCMJ49
-        0AAAAABJRU5ErkJggg==
+        hM2nOumhS8RtTomLu5fwf/qrmf89lvj/t5rmZIvVMpvlTufNlzi8N5tm64SsIGxTwrP420n/++9N/G89
+        w/EazlRpsdlCOv1ozpW001n/nVd47bWZ51QfsTX2gtYxrT/2pxz/F+0v+2s5yRHFcAzD7FfZ85jvs+4L
+        vRDxI+xRxH/9mwb/LS5Z/c85UPrWdrIzZmrE5RyzbWZ8Vqtt3czX2aTaLXJytZrjx4uuFgDX7hEo1fgq
+        MAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
