--- a/ land-cost/LandCost.Forms/Forms/CertificationForm.resx
+++ b/ land-cost/LandCost.Forms/Forms/CertificationForm.resx
@@ -123,34 +123,35 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pdfMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAJoSURBVDhPhZJLaBNBGMfXJEhFoojehCqKNXgTRSvYtA0F4zY5pDWClkJ7SWpRqFbUHhSJVmIk
-        JeLZY4XGF4mobTVCHwo+mqZpzaNJTOlaNQ0xTZNtNrub/ZxdtSS7Pg4fszPz/X/zn/8sBgBYaa3kCwpU
-        eyiKtiS/L78JxAhT8NPnjeK+33NBTLOwliow1Uh4DdU7VHSeKkCWzEN4bgE+RufjRDJzxXqrb6sYhB07
-        fmIfxXABBCgiIZQWDyG+pSBGJICkGHjx0uOWACq3bd8biMSzDMuVicWwArLJFjkwGo36UohwBav9tpNF
-        H3mK/icEtcDo6NiwBFC1W6WOxInc/1ygawLNFDkcx+vLQuQnPQOd45ZgK3T5cLg03QTPFvohu0JKHPEu
-        XO4n98sAp311bb1hHEzeQ4L41eIDuOA3gCPcDUtkpgzCu0BOWYOhqYGHCBn0hvDAzVk9mCZqoduvg2Um
-        DQmKAFv4FLiIu390MTg07FoF2KONuTuxFohkZ+Brfg4YjuadIlAKrKEOCYB/kWKRY49otbW/HByN9kV1
-        4E2PCcI0vSiMI8nH0DmpKQOgEIW9RCoDhmZjmwA446uzOWI6uB48CZZgO1wNtMI8OSvkcXG6WQDwp/4U
-        LrE2u+P5zl1VBgzD1gsAk1e95eyUZrxrSg3tHw5Ch1cN5/18Jodh8Ms9QZglKRh45PbvP1BtRsLNkmc0
-        T9RsMnvVN5A4aH5fQ16eaQFPwgk5dLrr6VCoXtNwTiaTVZb+RKshihflcrmy3/nwrWfkNaFt1PcoFIod
-        4h6JA3GDUrlBVVGxToXsrvmbmF//ASWFD5THba8zAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAmVJREFUOE+F
+        kV9IU1Ecx9c2wgiLqLfAosiktyjKIKcOoTW3h2kLSgR92UwKLKPyoYiVsYzJouceDVz/2KJSa4F/Cvrj
+        nNP2R7cm3qzmWHN/rru7926/zjl2R9cNOvD53T/nfL7nd8+VAICI1UxWjjjAMKwp+jv5wRuiDL5v37eu
+        XydACsvDRibLVSPxFuITgs0wWUjRGQgsLMHX4GKYiiZumO/17ywKOHX6zCGGy3tRQA6J8C84hPoVgxAV
+        AZrh4M1bp6MooGLX7oPe+XCK4/MieT1Z1Cafy4Ner9eKAnAxW+7beHSTYdiSsgAeY2PjI9gRIKVyf5Vi
+        Pkyl/9cF+kxguVxerVbXiwIwPYOdEyZfK3S51XBtpgleLQ1AapUuCsHD7njxWPBIOe+ua+sNqMHgOkbk
+        d8tP4IpHB9ZAN6zQCVEA7gJ1yut0TQ2FgF6/2nt3TguGyVro9mggycUhwlDQFzgHduqhKACDx9DwiL0Q
+        YAk2ph+EWmA+NQs/MwvA5VmyKMnFwOzvKArAfySXy/MnVKravx2cDPYHNeCKjxMxzi6T62j0OXROKUUy
+        OkQyF4klQNesbyMBF9x1fdaQBm77zoLJ1w43va2wSM+R87g601zYdU1c4fss1td791XqJBLJZhJgcCl2
+        XJxWTnRNK6D9y1HocCngsgefyXEY+vGIiCmagcFnDs/hI9VGJG7HHoYUjHGyZpvRpbiDZJ/xcw19fbYF
+        nBEbpNHu9pfD/nplwyWpVFohrBcQPQjIZLLyAdvTj87R95SqUdsjl8v3lFqHKfkSU16+paqsbFMVandD
+        qfk1QPIHJYUPlD3cOlwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="refreshMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAJuSURBVDhPY2DAAiwnOWpbTnKwtZntLIRNHqeY+wI/24LdJW97L0/433iq5b//1pB/JsusdllO
-        d7AgaJDpFmvX3GOF/ya+mfS/+UnL/4Q9qV9TL2Y+zL9U/N9ik+1fy1kOOTgNMdplzhF2MOpL8/PW//Nf
-        LPyfvCnjReyGZAWQBvONtsZRe+KPWiyz+281zTEZqyGGO82CLe5Y/e941v0/aXP6f6vpTjrICvUPGzFa
-        LXSssJriGIxhQMT62O2Gm81vql1S/59zNe+/9Sznl7icarbGmiVxU9o7YACrwNXEbUl6q3VZ57/aJY3/
-        mVez/6dtyf4dtibmkfUMJxl0g+x2uNSnbM/4bz3daQVczm9nsK7/3uDfahc1/mud1vmff6Xwv9eigE3o
-        mi3X2GtH3Yr9NefB/P82c13+WUyw14erCdoRdkr1itp/14tu/5M2pb+xnuksjmyA6TZLZodjrqe73/T8
-        n/d+/v+U7VnAAHVCWGK4x1TM84Dv79JTlf+tpjqGo9sevznlWszOxH+VL6r+97zu/T/93kyQK/4DA9UM
-        rjZ0f1SNyxzvAlwBaLrVSi7ucNL/npe9/9c+Xw+JramObRjqgU5TAUroYbhiU2pc3L2E/9NfzfzvscT/
-        v+V0R1usltksdz5vtcThvcVUeydkBdFbEp7F3076339v4n9gGF3DmSrNN9tKpx/NuZJ2Ouu/yyqvvbbz
-        nesjtsde0Dmm/8f+lOP/8gPVf4F+RzEcwzCzTdY85vus+0KvRvwIexTxX/+mwX+LS1b/C4+WvrWd6oKZ
-        GnE5x2inOZ/lans383W2qbaLXFzt5rjxoqsFADUmEdOrIgxPAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAolJREFUOE9j
+        wAYsJzlqW05ysLWZ7SwEFSIOuC/wsy3YXfK29/KE/42nWv77bw35Z7LMapfldAcLqBLcwHSLtWvuscJ/
+        E99M+t/8pOV/wp7Ur6kXMx/mXyr+b7HJ9q/lLIccqFJMYLTLnCPsYNSX5uet/+e/WPg/eVPGi9gNyQog
+        OfONtsZRe+KPWiyz+281zTEZrAEdGO40C7a4Y/W/41n3/6TN6f+tpjvpQKXAQP+wEaPVQscKqymOwVAh
+        BIhYH7vdcLP5TbVL6v9zrub9t57l/BIqhQHM1lizJG5KewcMYBWoEAND3Jakt1qXdf6rXdL4n3k1+3/a
+        luzfYWtiHlnPcJKBKoEDux0u9SnbM/5bT3daARViYPDbGazrvzf4t9pFjf9ap3X+518p/O+1KGATVBoO
+        LNfYa0fdiv0158H8/zZzXf5ZTLDXh0oxMATtCDulekXtv+tFt/9Jm9LfWM90FodKgYHpNktmh2Oup7vf
+        9Pyf937+/5TtWcAAdUJYYrjHVMzzgO/v0lOV/62mOoZDheEgfnPKtZidif8qX1T973nd+3/6vZkgV/wH
+        BqoZVAkDQ+j+qBqXOd4FUC4GMN1qJRd3OOl/z8ve/2ufr4fE1lTHNqg0AgCdpgKU0INy4SB+U2pc3L2E
+        /9NfzfzvscT/v+V0R1uoFCqwWe583mqJw3uLqfZOUCEwiN6S8Cz+dtL//nsT/wPD6BpUGBOYb7aVTj+a
+        cyXtdNZ/l1Vee23nO9dHbI+9oHNM/4/9Kcf/5Qeq/wL9jmI4BjDbZM1jvs+6L/RqxI+wRxH/9W8a/Le4
+        ZPW/8GjpW9upLpipERcw2mnOZ7na3s18nW2q7SIXV7s5brxQKShgYAAANSYR0w/lJgAAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -171,34 +172,34 @@
   <data name="exportBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJZSURBVDhPjZNvSBNhHMcNYnuREVHvggbCwHoXQhmszTRw
-        zY1wsb1QBH0ztyiwFKsXRSwXy1gZve5NUJIN4gxqKQZOEQqdusnm3C5ll+Uma2632z33Z/t1dy+G28Xq
-        gYfj7vl9Ps/3+T1cXV3VAICDCKHTNM04U79zC5E4YcNx/Eh1XcW7ACkolm2maOZhgaa/ZXN5lkYMkBQN
-        0a1tCMUSm4nU3v0Rj+eETGSxdDVRHBcm84VigWZg/xQlxE4acCIJFOJgenpmUiZQqVRnwrFNkuNLFXC1
-        jGF54IslsFqtJpnE7Xk+wQvnoBFbUyKUgN/vn5IJ1OpT2lj8e/5fKRDDAVVAJYPBcFEmGX7rmHdGemBg
-        xQB3Qmb4uP0ayAIlSySmwDDsXYXg+rKu1xU1gC1wXoK/pLwwHOyEsegg7FHZComYQugPbzabL5UlrnB7
-        +PGGCWxLOhgMGiHHZSCJCBiNOgAjXv41hc/nw8oCT7wj/wLvhhi5Br/oLeBKrJhUEKXBvW6XCcQbQYjh
-        9Xq9TpK4wpfjT+NGCGTmJDDDpqTn7O57uLbcWiFguaK0lkxn4YrZ0isJbqy0jI7hRhiJdIEz0gcPwj2Q
-        oDakftwOXZUE4q7i+LGzy7ufPPvUoFZ3CughSWBb1B2/udo6P7Cqhb7Fc2APaGEoKPZEA76fbySQpBCM
-        eyeDTWeb+wXkmOwaHUHNUduS9pE9oIn0L1yg7q11w0xyAvLC7tiHz+stbW23BOhkzZ9q3+LhV+Per1Oz
-        c0R7h+muUqls+F+wXFdfX9+oUCgahQ8HasF/ACNPNMDoqybPAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJhSURBVDhPjZFvaBJhHMcvCH3RIqLeBQkDYfUuBrXAdG3B
+        zCkxQ19sDLY3TqNgtbHqRRE2wxbWote9CWq0hLgFZRsLdCMoNrfp0DkVh8dWWs4/53nn3emvu/PKuQnr
+        Az/u4Xl+n+/z55DdAMBBiqJOk2TRmtzOfQ1GMFM0Gj0iLteHkyQETbcQZPFhgSS//06laZIqAk6QENrY
+        BH84HosnM/dHHY4TolLFYOhuJhgmsJ3OlgpkEXYWH4L9TEEUSwBBMTAzMzslalVkMtmZQDiGM2y5Rt5d
+        RZoFtlQGo9GoE9UqdsfzSZa7B0nRdeW/xePxeKZFrYpcfkoZjkTy+52CKjKQyeJljUZzUVSrjLy1zFuD
+        vTC4rIE7fj183HwNeIHYE8KDoug7UatwfUnVZwtpwOQ9L8hfkk4Y8XXBeGgIMkS2JoA/RTaXZ/V6/SVR
+        RxBboCPweF0HpkUVDPm0kGPSkKAwGAtZAMVe1gTwxeNyuVBRRxBHpDP/ItoDYXwVfpAbwJRpoSnHpMC+
+        Zt4TwP8RHM+zarVaJQTYApcjTyNa8KbnBDFNJ4Wv+9d7uLbUViPTTElYS6SycEVv6BMCbiy3jo1HtTAa
+        7AZrsB8eBHohTqwL73Hbf/XfrjwxbIu1P3n2qVEu7+LUQ0KAaUF1/OZK2/zgihL6F86B2auEYR//Jgpw
+        bb0RRJygYMI55Ws+2zLAKccEcScWn+KoaVH5yOxVBAfcF4h7qz0wm5iEPLc7+uHzWmt7+y2u7WSle38O
+        v5pwfpt2z2Ednbq7Uqm0UZz/fxoaGpokEkkTNzxQmakHgvwBQFg0X0ZIisoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="refreshBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJySURBVDhPY2DAAqynOGpbTbKztZjtJoRNHqeY+zx/2+zd
-        JW97L0/433iq5b//hpB/Jkssd1lPs7cgaJDxVmvX3IOF/ya+mfS/+UnL/+g9CV8TL2Q+zL9U/N9ik+1f
-        i5n2OTgNsd9vzxF4MPRL8/PW//NfLPwftynjRfz6eAWQBvP1NsZRu+KOWiyz+2891SEZqyGGO8yDLe5Y
-        /e941v0/aXP6f8tp9jooCv8zMFoudKywmuwQjGFA2PrY7YYbzW+qXVL/n3M177/1LPuXuJwKdClL4trE
-        dxZT7FXgamI2xr7VuqzzX+2Sxv/Mq9n/E9en/Q5eHfPIbJa9DLpBdjtc6lO2Z/y3nua4Ai7nvytE139H
-        8G+1ixr/tU7r/M+/Uvjfa0HAJnTN1qsdtUNvRfya82D+f5sZLv/MJjnqw9UE7Qg5pXpF7b/rRbf/SZtS
-        3pjPdhJHNiB0VSizwzHX091vev7Pez//f8r2LGA4OSAs0dtpKeZ5wPd36anK/1ZTHcLRbY/fmHItZkvi
-        v8oXVf97Xvf+n35v5n+buS7/LSY5mcHVhuyPqnGZ612AKwCNN1nLxR1O+t/zsvf/2ufrIbE1xaENQz0o
-        hM2nOumhS8RtTomLu5fwf/qrmf89lvj/t5rmZIvVMpvlTufNlzi8N5tm64SsIGxTwrP420n/++9N/G89
-        w/EazlRpsdlCOv1ozpW001n/nVd47bWZ51QfsTX2gtYxrT/2pxz/F+0v+2s5yRHFcAzD7FfZ85jvs+4L
-        vRDxI+xRxH/9mwb/LS5Z/c85UPrWdrIzZmrE5RyzbWZ8Vqtt3czX2aTaLXJytZrjx4uuFgDX7hEo1fgq
-        MAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKLSURBVDhPjdJdSFNhGAfwE3XRRXXRRV0U0UUtmaaJsXN2
+        zs7Oh5uVUdM2zWxubq3UNTMpISOQ0CJQK6fO/NoyxMRVYxummbUi9GK7SOcHWCElobNm3hRE5p78eJnY
+        Evrdvf//cz543xf7F6qGiybNUppoTNqKov9zyKqgjc8vz1QO3YXr3jJQ2FWhg63iHsrCEGhkbQmdlDy/
+        tzBUFTRD6ecyONV7+oduIO9Tgf8SEC56nqhnTGg0EuNhNqa+Tv1eOnUDbIEW0LhyA1qHdvdihzskCZk9
+        mj6iTQpULXtm6YG/xXfjSuIDCbcmy0HvzgGxhYlB1TLA1olbuCtkNatEyYp0R1ZXvBMfE/j3gWnkAlAN
+        zDSqIiz86QbdI903oobZgyIMUzvVM8KhGBD4oyBv5DxoO3RzSrt6QtTA7EQjYdJuWYmhKxcoC9eOIgxT
+        9Kj2K9zKOcFgFAh9MVAwXAjJ91NcqA6j7Fx0yjvlr6aPNpBUy0IiMxeHKgw70a3y7h0WgHwwCfQuQxBv
+        5LejaklaR9p6tl/uKw9WgHXWBoYu48I+sSsfiX0m3nbk1bG5Im8xkLXsSRSHaZ2GUbVDFyoOXIWKr5VQ
+        N14PkmYZEGZehEYwTOXJvCZrPnoRLSMkuKhdmjd6qJiuhMdTjuXTqmFvonrF4g7jtXwsWoZp3AaNZjwb
+        6r7Uw+FWBZAWnkbVapKH/Fu8lZ0VWWgeRUvSXdmT2vd6uDNeBdQ9bhTFkQg3sSOnzzR8zmeExPbkFxIr
+        X5LRmTUg7Bf+Zrwc5HsK58VmbtXLIzAdzCb8JXU7zZfxM30iA+LGDgDhJ8HoKZqhqxMjb+NaRE9FW0g7
+        nYQ/kZyVPuDlZNPxzahCMOwPLOQQ2f52TFYAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
